--- a/.markbot.yml
+++ b/.markbot.yml
@@ -1,5 +1,5 @@
-repo: 'kraken-good-accessibility'
-canvasCourse: 'web-dev-3'
+repo: "kraken-good-accessibility"
+canvasCourse: "web-design-3"
 
 inherit:
   - naming-restrict-live
@@ -8,27 +8,28 @@ inherit:
   - css
   - aria-landmarks
   - google-fonts
-  - css-order-modules-type-main
   - nav-focus
   - nav-hover
 
 html:
-  - path: 'index.html'
+  - path: "index.html"
     has:
-      - ['link[href*="Libre+Baskerville"]', 'The Google Font, `Libre Baskerville` (regular, italic & bold), is missing']
+      - [
+          'link[href*="Libre+Baskerville"]',
+          "The Google Font, `Libre Baskerville` (regular, italic & bold), is missing",
+        ]
       - 'nav[role="navigation"] > ul > li:first-child > a[aria-label]'
       - 'nav[role="navigation"] > ul > li:first-child i[role="presentation"]'
       - 'nav[role="navigation"] > ul > li:nth-child(2) > a[aria-label]'
       - 'nav[role="navigation"] > ul > li:nth-child(2) i[role="presentation"]'
       - 'nav[role="navigation"] > ul > li:last-child > a[aria-label]'
       - 'nav[role="navigation"] > ul > li:last-child i[role="presentation"]'
-      - 'footer nav > ul > li:first-child > a[aria-label]'
+      - "footer nav > ul > li:first-child > a[aria-label]"
       - 'footer nav > ul > li:first-child i[role="presentation"]'
-      - 'footer nav > ul > li:nth-child(2) > a[aria-label]'
+      - "footer nav > ul > li:nth-child(2) > a[aria-label]"
       - 'footer nav > ul > li:nth-child(2) i[role="presentation"]'
-      - 'footer nav > ul > li:last-child > a[aria-label]'
+      - "footer nav > ul > li:last-child > a[aria-label]"
       - 'footer nav > ul > li:last-child i[role="presentation"]'
-      - '.no-print'
     hasNot:
       - 'nav[role="navigation"] > ul > li:first-child > a[aria-label=""]'
       - 'nav[role="navigation"] > ul > li:nth-child(2) > a[aria-label=""]'
@@ -39,25 +40,14 @@ html:
       - 'footer nav > ul > li:nth-child(2) > a[aria-label=""]'
       - 'footer nav > ul > li:last-child > a[aria-label=""]'
 
-css:
-  - path: 'css/main.css'
-    has:
-      - ['@print', '.inset-img', 'border-color', '#000']
-  - path: 'css/modules.css'
-    locked: true
-  - path: 'css/type.css'
-    locked: true
-
 files:
-  - path: 'images/icons.svg'
+  - path: "images/icons.svg"
     locked: true
-  - path: 'images/kraken.jpg'
+  - path: "images/kraken.jpg"
     locked: true
 
 screenshots:
-  - path: 'index.html'
-    sizes: ['print']
-  - path: 'index.html'
+  - path: "index.html"
     label: "Nav focus"
     sizes: [650]
     before: |
